--- a/cours 6/du proff/NumPy I - Exercices.ipynb
+++ b/cours 6/du proff/NumPy I - Exercices.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "digital-dylan",
    "metadata": {
     "executionInfo": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "6y42CIbhEwyi",
    "metadata": {
     "colab": {
@@ -113,6 +113,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0ad6089",
+   "metadata": {},
+   "source": [
+    "### Réponce 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "56e4c975",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = (salaire_horaire >= 30.)\n",
+    "data1 = data\n",
+    "print(data1.size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6779c033",
    "metadata": {},
    "source": [
@@ -121,11 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "14d60cbd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 9.5  10.75 15.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = (salaire_horaire < 15.50)\n",
+    "data1 = salaire_horaire[data]\n",
+    "print (data1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "296b2ffe",
    "metadata": {},
    "outputs": [
@@ -178,7 +218,7 @@
     }
    ],
    "source": [
-    "data = np.array(salaire_horaire ) * heures_par_semaine\n",
+    "data = salaire_horaire  * heures_par_semaine\n",
     "\n",
     "data1 = (data * semaine_par_annee )\n",
     "data2 = np.sum(data1) / data.size\n",
