il reste a faire le devoir

--- a/cours 6/du proff/NumPy I - Exercices.ipynb
+++ b/cours 6/du proff/NumPy I - Exercices.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "digital-dylan",
    "metadata": {
     "executionInfo": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6y42CIbhEwyi",
    "metadata": {
     "colab": {
@@ -105,10 +105,35 @@
    "source": [
     "print(f'réponse {semaine_par_annee}')\n",
     "import numpy as np\n",
-    "salaire_horaire = np.array(salaire_horaire )\n",
-    "\n",
-    "\n",
-    "\n"
+    "salaire_horaire = np.array(salaire_horaire )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c3237d",
+   "metadata": {},
+   "source": [
+    "### Réponce 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d9d9b72b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7166.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = (salaire_horaire < 25)\n",
+    "data1 =  np.sum((salaire_horaire[data] * .025)) * heures_par_semaine * semaine_par_annee\n",
+    "print(data1)"
    ]
   },
   {
@@ -121,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "56e4c975",
    "metadata": {},
    "outputs": [
@@ -129,13 +154,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "9\n"
      ]
     }
    ],
    "source": [
-    "data = (salaire_horaire >= 30.)\n",
-    "data1 = data\n",
+    "data = (salaire_horaire >= 30)\n",
+    "data1 = salaire_horaire[data]\n",
     "print(data1.size)"
    ]
   },
