fait le devoir jusque le numero 5

--- a/cours 6/numpy.ipynb
+++ b/cours 6/numpy.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7747ffcc",
    "metadata": {
     "executionInfo": {
@@ -127,7 +127,7 @@
     "    print_title(statement_string)\n",
     "    print(eval(statement_string))\n",
     "    \n",
-    "def print_demo(title, statement_string):\n",
+    "def Sprint_demo(title, statement_string):\n",
     "    print_title(title)\n",
     "    print_result(statement_string)    "
    ]
