--- a/cours 6/du proff/NumPy I - Exercices.ipynb
+++ b/cours 6/du proff/NumPy I - Exercices.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 178,
    "id": "digital-dylan",
    "metadata": {
     "executionInfo": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 179,
    "id": "6y42CIbhEwyi",
    "metadata": {
     "colab": {
@@ -105,7 +105,7 @@
    "source": [
     "print(f'réponse {semaine_par_annee}')\n",
     "import numpy as np\n",
-    "salaire_horaire = np.array(salaire_horaire )"
+    "salaire_horaire = np.array(salaire_horaire)"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 180,
    "id": "d9d9b72b",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 181,
    "id": "56e4c975",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 182,
    "id": "14d60cbd",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 183,
    "id": "06116acd",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "id": "296b2ffe",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "id": "89aceeb9",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,103 @@
     "id": "Vw7UnbS9BtHx"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "largeur = 5\n",
+    "hauteur = 5\n",
+    "size = (largeur, hauteur)\n",
+    "# rng = np.random.default_rng(123)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1\n",
+    "def create_image(size):\n",
+    "    return(np.zeros(size))\n",
+    "#2\n",
+    "# def fill_image(image,color):\n",
+    "#     if color == 0:\n",
+    "#         # image = np.zeros(image.shape)\n",
+    "#         image[:] = 0\n",
+    "#     elif color == 1:\n",
+    "#         # image = np.ones(image.shape)\n",
+    "#         image[:] = 1\n",
+    "def fill_image(image,color=1):\n",
+    "    image[:] = color\n",
+    "#3\n",
+    "def clear(image):\n",
+    "    image[:] = 0\n",
+    "#4\n",
+    "def randomize(image, percent=0.5):\n",
+    "    image[:] = np.random.rand(*image.shape)< percent # le * est une manire de ovrire un tuple donc si un tuple : var = (1 , 3 ) si on met *var c'est comme ecrire (1,3)\n",
+    "#5\n",
+    "def draw_point(image, point, color):\n",
+    "    x, y = point\n",
+    "    if 0 <= x < image.shape[0] and 0 <= y < image.shape[1]:  \n",
+    "        image[y,x] = color\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "a56d0d7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "-------------\n",
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n",
+      "-------------\n",
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "-------------\n",
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "-------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "image = create_image(size)\n",
+    "\n",
+    "print(image)\n",
+    "print(\"-------------\")\n",
+    "\n",
+    "fill_image(image,color) #on fait du slicing.... \n",
+    "print(image)\n",
+    "print(\"-------------\")\n",
+    "\n",
+    "color = 0\n",
+    "clear(image)\n",
+    "print(image)\n",
+    "print(\"-------------\")\n",
+    "\n",
+    "percent = 0.5\n",
+    "# randomize(image, percent)\n",
+    "# print(image)\n",
+    "# print(\"-------------\")\n",
+    "point = (1,3) \n",
+    "color = 1\n",
+    "draw_point(image, point, color)\n",
+    "print(image)\n",
+    "print(\"-------------\")"
+   ]
   }
  ],
  "metadata": {
@@ -411,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
