--- a/cours 6/du proff/NumPy I - Exercices.ipynb
+++ b/cours 6/du proff/NumPy I - Exercices.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 13,
    "id": "digital-dylan",
    "metadata": {
     "executionInfo": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 23,
    "id": "6y42CIbhEwyi",
    "metadata": {
     "colab": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 15,
    "id": "d9d9b72b",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 16,
    "id": "56e4c975",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 17,
    "id": "14d60cbd",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 18,
    "id": "06116acd",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 19,
    "id": "296b2ffe",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 20,
    "id": "89aceeb9",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,8 @@
     "\n",
     "# 1\n",
     "def create_image(size):\n",
-    "    return(np.zeros(size))\n",
+    "    return np.zeros((size[1],size[0]), dtype= np.uint8)\n",
+    "    # return(np.zeros(size))\n",
     "#2\n",
     "# def fill_image(image,color):\n",
     "#     if color == 0:\n",
@@ -419,12 +420,15 @@
     "    x, y = point\n",
     "    if 0 <= x < image.shape[0] and 0 <= y < image.shape[1]:  \n",
     "        image[y,x] = color\n",
+    "\n",
+    "def draw_rectangle(image, top_left, bottom_right):\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 26,
    "id": "a56d0d7e",
    "metadata": {},
    "outputs": [
@@ -438,11 +442,11 @@
       " [0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]]\n",
       "-------------\n",
-      "[[1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]]\n",
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
       "-------------\n",
       "[[0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]\n",
@@ -464,7 +468,7 @@
     "\n",
     "print(image)\n",
     "print(\"-------------\")\n",
-    "\n",
+    "color = 0\n",
     "fill_image(image,color) #on fait du slicing.... \n",
     "print(image)\n",
     "print(\"-------------\")\n",
@@ -507,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
