deux version pour le labo de python

--- a/cours 6/du proff/NumPy I - Exercices.ipynb
+++ b/cours 6/du proff/NumPy I - Exercices.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "digital-dylan",
    "metadata": {
     "executionInfo": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "6y42CIbhEwyi",
    "metadata": {
     "colab": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "d9d9b72b",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "56e4c975",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "14d60cbd",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "06116acd",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "296b2ffe",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "89aceeb9",
    "metadata": {},
    "outputs": [
@@ -388,8 +388,8 @@
    },
    "outputs": [],
    "source": [
-    "largeur = 5\n",
-    "hauteur = 5\n",
+    "largeur = 10\n",
+    "hauteur = 10\n",
     "size = (largeur, hauteur)\n",
     "# rng = np.random.default_rng(123)\n",
     "\n",
@@ -400,35 +400,45 @@
     "    return np.zeros((size[1],size[0]), dtype= np.uint8)\n",
     "    # return(np.zeros(size))\n",
     "#2\n",
-    "# def fill_image(image,color):\n",
-    "#     if color == 0:\n",
-    "#         # image = np.zeros(image.shape)\n",
-    "#         image[:] = 0\n",
-    "#     elif color == 1:\n",
-    "#         # image = np.ones(image.shape)\n",
-    "#         image[:] = 1\n",
+    "def fill_image(image,color):\n",
+    "    if color == 0:\n",
+    "        # image = np.zeros(image.shape)\n",
+    "        image[:] = 0\n",
+    "    elif color == 1:\n",
+    "        # image = np.ones(image.shape)\n",
+    "        image[:] = 1\n",
     "def fill_image(image,color=1):\n",
     "    image[:] = color\n",
-    "#3\n",
+    "# #3\n",
     "def clear(image):\n",
     "    image[:] = 0\n",
-    "#4\n",
+    "# #4\n",
     "def randomize(image, percent=0.5):\n",
     "    image[:] = np.random.rand(*image.shape)< percent # le * est une manire de ovrire un tuple donc si un tuple : var = (1 , 3 ) si on met *var c'est comme ecrire (1,3)\n",
-    "#5\n",
+    "# #5\n",
     "def draw_point(image, point, color):\n",
     "    x, y = point\n",
     "    if 0 <= x < image.shape[0] and 0 <= y < image.shape[1]:  \n",
     "        image[y,x] = color\n",
+    "# #6\n",
+    "def draw_rectangle(image, top_left, bottom_right):\n",
+    "    top_left = (max(0,top_left[0]),max(0,top_left[1]))\n",
+    "    image[*top_left]=1\n",
+    "    bottom_right = (min(image.shape[1],bottom_right[0]),min(image.shape[0],bottom_right[1]))\n",
+    "    image[*bottom_right]=1\n",
+    "    \n",
     "\n",
     "def draw_rectangle(image, top_left, bottom_right):\n",
-    "    \n",
-    "    "
+    "    top_left = (max(0,top_left[0]), max(0,top_left[1]))\n",
+    "    image[*top_left]=1\n",
+    "    bottom_right = (min(image.shape[1],bottom_right[0]), min(image.shape[0],bottom_right[1]))\n",
+    "    image[*bottom_right]=1\n",
+    "    image[top_left[1]:bottom_right[1],top_left[0]:bottom_right[0]] = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "id": "a56d0d7e",
    "metadata": {},
    "outputs": [
@@ -436,55 +446,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n",
+      "[[0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]]\n",
       "-------------\n",
-      "[[0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n",
-      "-------------\n",
-      "[[0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n",
-      "-------------\n",
-      "[[0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n",
+      "[[0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 1 0 0 0 1 0 0]\n",
+      " [0 0 1 1 0 0 0 0 0 0]\n",
+      " [0 0 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]]\n",
       "-------------\n"
      ]
     }
    ],
    "source": [
+    "#1\n",
     "image = create_image(size)\n",
-    "\n",
     "print(image)\n",
     "print(\"-------------\")\n",
     "color = 0\n",
-    "fill_image(image,color) #on fait du slicing.... \n",
-    "print(image)\n",
-    "print(\"-------------\")\n",
-    "\n",
-    "color = 0\n",
-    "clear(image)\n",
-    "print(image)\n",
-    "print(\"-------------\")\n",
-    "\n",
-    "percent = 0.5\n",
+    "#2\n",
+    "# fill_image(image,color) #on fait du slicing.... \n",
+    "# print(image)\n",
+    "# print(\"-------------\")\n",
+    "#3\n",
+    "# color = 0\n",
+    "# clear(image)\n",
+    "# print(image)\n",
+    "# print(\"-------------\")\n",
+    "#4\n",
+    "# percent = 0.5\n",
     "# randomize(image, percent)\n",
     "# print(image)\n",
     "# print(\"-------------\")\n",
-    "point = (1,3) \n",
-    "color = 1\n",
-    "draw_point(image, point, color)\n",
+    "\n",
+    "#5\n",
+    "# point = (1,3) \n",
+    "# color = 1\n",
+    "# draw_point(image, point, color)\n",
+    "# print(image)\n",
+    "# print(\"-------------\")\n",
+    "top_left = (2,4)\n",
+    "bottom_right = (4,7)\n",
+    "draw_rectangle(image, top_left, bottom_right)\n",
     "print(image)\n",
     "print(\"-------------\")"
    ]
@@ -511,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
