--- a/cours 6/du proff/NumPy I.ipynb
+++ b/cours 6/du proff/NumPy I.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d4e92baa",
    "metadata": {
     "executionInfo": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7747ffcc",
    "metadata": {
     "executionInfo": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "474dec30",
    "metadata": {
     "executionInfo": {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b28d0823",
    "metadata": {
     "colab": {
@@ -264,7 +264,7 @@
       " - size : 6\n",
       " - itemsize : 8\n",
       " - nbytes : 48\n",
-      " - data : <memory at 0x000001A0CEF0BA00>\n",
+      " - data : <memory at 0x00000203FEEC0880>\n",
       "----------------------------------------------------- Attributs ndarray : data_2\n",
       " - dtype : uint16\n",
       " - ndim : 2\n",
@@ -272,7 +272,7 @@
       " - size : 6\n",
       " - itemsize : 2\n",
       " - nbytes : 12\n",
-      " - data : <memory at 0x000001A0CF071E50>\n",
+      " - data : <memory at 0x00000203FEEE35E0>\n",
       "----------------------------------------------------- Attributs ndarray : data_3\n",
       " - dtype : float64\n",
       " - ndim : 3\n",
@@ -280,7 +280,7 @@
       " - size : 12\n",
       " - itemsize : 8\n",
       " - nbytes : 96\n",
-      " - data : <memory at 0x000001A0A0902D40>\n"
+      " - data : <memory at 0x00000203EE88F790>\n"
      ]
     }
    ],
@@ -1530,7 +1530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
