--- a/cours 6/numpy.ipynb
+++ b/cours 6/numpy.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d4e92baa",
    "metadata": {
     "executionInfo": {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7747ffcc",
    "metadata": {
     "executionInfo": {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "474dec30",
    "metadata": {
     "executionInfo": {
@@ -200,6 +200,9 @@
     "                      [3., 3.5, 4.] ],\n",
     "                   \n",
     "                   [  [9., 8.5, 8.],\n",
+    "                      [7., 6.5, 6.] ] , \n",
+    "                      \n",
+    "                   [  [9., 8.5, 8.],\n",
     "                      [7., 6.5, 6.] ]  \n",
     "                  ])"
    ]
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "b28d0823",
    "metadata": {
     "colab": {
@@ -260,8 +263,8 @@
       "----------------------------------------------------- Attributs ndarray : data_3\n",
       " - dtype : float64\n",
       " - ndim : 3\n",
-      " - shape : (2, 2, 3)\n",
-      " - size : 12\n"
+      " - shape : (3, 2, 3)\n",
+      " - size : 18\n"
      ]
     }
    ],
@@ -702,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b7c166cb",
    "metadata": {
     "colab": {
@@ -828,6 +831,7 @@
     "print_result('data[:,0,:]')\n",
     "print_result('data[:,:,0]')\n",
     "print_result('data[[0,1,2],[0,1,2],[0,1,2]]')\n",
+    "# block 0 first 2 row 2firstcolum\n",
     "print_result('data[0,0:2,0:2]')\n",
     "print_result('data[0,...]')\n",
     "print_result('data[...,0]')\n",
@@ -836,7 +840,10 @@
     "data = np.arange(24).reshape(4,6)\n",
     "print_title('-')\n",
     "print_result('data')\n",
-    "print_result('data[3:0:-1,1:6:2]')"
+    "print_result('data[3:0:-1,1:6:2]')\n",
+    "# 3:0:-1 \n",
+    "# first row 3 2 1 (0 exclude)\n",
+    "# column 1:6:2 \n"
    ]
   },
   {
@@ -1175,7 +1182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
