--- a/cours 6/du proff/NumPy I - Exercices - Solutionnaire.ipynb
+++ b/cours 6/du proff/NumPy I - Exercices - Solutionnaire.ipynb
@@ -379,13 +379,38 @@
    "execution_count": null,
    "id": "4296d8ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
+      "[[0 0 0 1 1 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 1 1 1 1 1 1 1 0 0 0 0 0]\n",
+      " [0 0 1 1 1 1 1 1 1 0 1 0 0 0]\n",
+      " [0 1 1 1 1 1 1 1 1 1 1 1 1 0]\n",
+      " [0 0 1 1 1 1 1 1 1 1 1 1 1 0]\n",
+      " [0 0 1 1 1 1 1 1 1 1 1 1 1 1]\n",
+      " [0 0 0 1 1 1 1 1 1 1 1 1 1 0]\n",
+      " [0 0 0 0 0 1 0 0 1 1 1 1 1 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Quelques tests \n",
     "\n",
     "im = create_image((14,9))\n",
     "print(im)\n",
-    "draw_circle(im, (5,3), 4)\n",
+    "# draw_circle(im, (5,3), 4)\n",
     "draw_circle(im, (10,5), 3)\n",
     "print(im)"
    ]
@@ -420,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
